Add Config routes and UI
